--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Alegreya');
+
 h1 {
   color: red;
   border-style: solid;
@@ -12,6 +14,10 @@ h1.about-me {
   border-width: 1px;
   border-color: red;
   width: 14%
+}
+
+p.about-me {
+  font-family: Alegreya, serif;
 }
 
 body {
@@ -33,16 +39,19 @@ img {
   border-width: 3px;
 }
 
-.top-padded {
-  padding-top: 150px;
-}
-
 .important {
   font-weight:bold;
 }
 
 .important:hover {
   background-color:pink;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
 p.important {
