add in transitions

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,9 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Alegreya');
 
-h1 {
+h1:hover {
+  transition: border 1s ease-out 1s;
   color: red;
   border-style: solid;
-  border-width: 1px;
+  border-width: 3px;
   border-color: red;
   width: 32%
 }
@@ -14,6 +15,12 @@ h1.about-me {
   border-width: 1px;
   border-color: red;
   width: 14%
+}
+
+h3:hover {
+  color: yellow;
+  font-size: 3rem;
+  transition: font-size ease-out 1s 1s;
 }
 
 p.about-me {
@@ -33,10 +40,11 @@ aside {
     float: right;
 }
 
-img {
+img:hover {
+  transition: border 1s 1s;
   border-style: groove;
   border-color: orange;
-  border-width: 3px;
+  border-width: 5px;
 }
 
 .important {
@@ -74,6 +82,7 @@ p.second-webpage {
   color: DarkSlateBlue;
 }
 
-a {
+a:hover {
+  transition: background-color 1s 1s;
   background-color: orange;
 }
